--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
     "next": "16.1.3",
+    "papaparse": "^5.5.3",
     "prisma": "^6.19.2",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "tailwind-merge": "^3.4.0",
+    "xlsx": "^0.18.5",
     "zod": "^4.3.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/papaparse": "^5.3.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
