feat: implement duplicate assignment management in utilities
- Add actions for checking and clearing duplicate assignments in the schedule.
- Create a new page and client component for utilities, accessible only to admin users.
- Introduce server-side functions to read and clear duplicate assignments from the database.
- Enhance the schedule client with improved error handling and notification features.
- Implement database migration to enforce uniqueness constraints on active assignments.
- Add stress testing scripts to validate concurrency and assignment integrity.
- Update the standings client to simplify state management for group IDs.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start": "next start",
     "postinstall": "prisma generate",
     "lint": "eslint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test:schedule:integrity": "node scripts/validate-schedule-assignment-integrity.mjs",
+    "test:schedule:stress": "node scripts/stress-schedule-concurrency.mjs"
   },
   "dependencies": {
     "@prisma/client": "^6.19.2",
