--- a/package.json
+++ b/package.json
@@ -11,9 +11,19 @@
     "lint": "eslint",
     "typecheck": "tsc --noEmit",
     "test:schedule:integrity": "node scripts/validate-schedule-assignment-integrity.mjs",
-    "test:schedule:stress": "node scripts/stress-schedule-concurrency.mjs"
+    "test:schedule:stress": "node scripts/stress-schedule-concurrency.mjs",
+    "test:e2e:seed": "node scripts/e2e-reset-seed.mjs",
+    "test:e2e": "playwright test",
+    "test:e2e:smoke": "E2E_SCENARIO=baseline-group playwright test --grep @smoke",
+    "test:e2e:critical": "E2E_SCENARIO=baseline-group playwright test --grep @critical",
+    "test:e2e:regression": "E2E_SCENARIO=knockout-ready playwright test --grep @regression",
+    "test:e2e:nightly": "E2E_RETRIES=1 npm run test:e2e:critical && E2E_RETRIES=1 npm run test:e2e:regression",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:report": "playwright show-report playwright-report"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.57.4",
     "@prisma/client": "^6.19.2",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
@@ -31,11 +41,13 @@
     "zod": "^4.3.5"
   },
   "devDependencies": {
+    "@playwright/test": "^1.58.2",
     "@tailwindcss/postcss": "^4",
-    "@types/papaparse": "^5.3.16",
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.16",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv": "^17.2.4",
     "eslint": "^9",
     "eslint-config-next": "16.1.3",
     "tailwindcss": "^4",
