feat: add metrics collector for performance tracking
- Implemented MetricsCollector class to gather and summarize performance metrics.
- Added methods for adding samples, timing functions, and writing JSON reports.

chore: configure Playwright for E2E testing

- Created playwright.no-seed.config.ts for E2E testing configuration.
- Set up environment variables and server options for testing.

feat: enhance database publication for real-time updates

- Added SQL migrations to register tables with the 'supabase_realtime' publication.
- Created triggers to update broadcast signal on changes to relevant tables.

feat: implement broadcast diagnostics script

- Added diagnose-broadcast-realtime.mjs to test broadcast transport and publish endpoint.
- Included checks for environment variables and connection validity.

chore: create preflight script for E2E database checks

- Added e2e-preflight-db.mjs to validate database connection and configuration before E2E tests.

feat: add real-time trigger testing script

- Implemented test-realtime-trigger.mjs to verify real-time event broadcasting.

chore: verify broadcast real-time setup

- Created verify-broadcast-realtime.mjs to check publication tables and policies in the database.

feat: add logging and publishing endpoints for broadcast

- Implemented API routes for logging broadcast events and publishing updates.
- Ensured admin access control for sensitive operations.

chore: add player and team templates for testing

--- a/package.json
+++ b/package.json
@@ -13,14 +13,22 @@
     "test:schedule:integrity": "node scripts/validate-schedule-assignment-integrity.mjs",
     "test:schedule:stress": "node scripts/stress-schedule-concurrency.mjs",
     "test:e2e:seed": "node scripts/e2e-reset-seed.mjs",
-    "test:e2e": "playwright test",
-    "test:e2e:smoke": "E2E_SCENARIO=baseline-group playwright test --grep @smoke",
-    "test:e2e:critical": "E2E_SCENARIO=baseline-group playwright test --grep @critical",
-    "test:e2e:regression": "E2E_SCENARIO=knockout-ready playwright test --grep @regression",
+    "test:e2e": "E2E_SCENARIO=existing-group playwright test",
+    "test:e2e:smoke": "E2E_SCENARIO=existing-group playwright test --grep @smoke",
+    "test:e2e:critical": "E2E_SCENARIO=existing-group playwright test --grep @critical",
+    "test:e2e:regression": "E2E_SCENARIO=existing-group playwright test --grep @regression",
+    "test:e2e:preflight": "node scripts/e2e-preflight-db.mjs",
+    "test:realtime:verify": "node scripts/verify-broadcast-realtime.mjs",
+    "test:realtime:diag": "node scripts/diagnose-broadcast-realtime.mjs",
+    "test:realtime:trigger": "node scripts/test-realtime-trigger.mjs",
+    "test:e2e:event-group": "npm run test:e2e:preflight && E2E_SCENARIO=existing-group playwright test --grep @event-group",
     "test:e2e:nightly": "E2E_RETRIES=1 npm run test:e2e:critical && E2E_RETRIES=1 npm run test:e2e:regression",
-    "test:e2e:headed": "playwright test --headed",
-    "test:e2e:ui": "playwright test --ui",
-    "test:e2e:report": "playwright show-report playwright-report"
+    "test:e2e:headed": "E2E_SCENARIO=existing-group playwright test --headed",
+    "test:e2e:ui": "E2E_SCENARIO=existing-group playwright test --ui",
+    "test:e2e:report": "playwright show-report playwright-report",
+    "test:e2e:broadcast:realtime": "playwright test --config=playwright.no-seed.config.ts e2e/broadcast-realtime.spec.ts --grep @broadcast-realtime",
+    "test:predata:integrity": "npm run test:schedule:integrity",
+    "test:predata:stress": "npm run test:schedule:stress"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
